...
  double caloriesIntake = 2000; // in kcal

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: Text('Diet Tracker'),
        flexibleSpace: Container(
          decoration: BoxDecoration(
            gradient: LinearGradient(
              colors: [Colors.red.shade900, Colors.yellow.shade800],
            ),
          ),
...
                        }
                      },
                    ),
                    SizedBox(height: 30),
                    _DietButton(
                      icon: Icons.local_drink,
                      label: 'Log Drink',
                      gradient: LinearGradient(
                        colors: [Colors.amber[600]!, Colors.orange[700]!],
                      ),
                      onPressed: () async {
                        final water = await Navigator.push(
                          context,
...
                        if (_controller.text.isNotEmpty) {
                          final water = double.parse(_controller.text);
                          Navigator.pop(context, water);
                        }
                      },
                      child: Text(
                        'Save Intake',
                        style: TextStyle(fontSize: 16),
                      ),
                    ),
                  ],
                ),
              ),
...
