...
                child: Column(
                  children: [
                    // Wrap Text with DefaultTextStyle
                    DefaultTextStyle(
                      style: jerseyStyle(48, brightWhite),
                      child: Text(
                        'Track Your Diet',
                        textAlign: TextAlign.center,
                      ),
                    ),
                    const SizedBox(height: 10),
                    DefaultTextStyle(
                      style: jerseyStyle(24, brightWhite),
...
                    ),
                  ),
                ],
              ),
              const SizedBox(height: 10),
              ElevatedButton(
                key: const Key('bootupPage2NextButton'),
                style: ElevatedButton.styleFrom(
                  backgroundColor: Colors.white,
                  shape: const CircleBorder(),
                  padding: const EdgeInsets.all(24.0),
                ),
                onPressed: () {
...
