...
}

class MyApp extends StatelessWidget {
  @override
  Widget build(BuildContext context) {
    return MaterialApp(
      title: 'Fitness Journey',
      theme: ThemeData(primarySwatch: Colors.red),
      home: ExercisesScreen(),
    );
  }
}

...
class ExercisesListScreen extends StatelessWidget {
  final String jsonString = '''
  {
    "numberOfExercises": 6,
    "exercises": [
        {
            "name": "Running",
            "machineUse": false,
            "timer": true
        },
        {
            "name": "Plank",
            "machineUse": false,
...
                      }
                    } else {
                      _submit();
                    }
                  },
                  child: Text(
                    _numberOfSets == null ? 'Continue' : 'Save Workout',
                    style: TextStyle(fontSize: 18, color: Colors.white),
                  ),
                ),
              ],
            ),
          ),
...
